(library
 (name mirage_crypto_arbi_ec)
 (public_name mirage-crypto-arbi-ec)
 (libraries cstruct eqaf.cstruct mirage-crypto-arbi mirage-crypto-arbi-rng)
 (foreign_stubs
  (language c)
  (names p224_stubs np224_stubs p256_stubs np256_stubs p384_stubs np384_stubs
    p521_stubs np521_stubs curve25519_stubs)
  (include_dirs ../src/native)
  (flags
   (:standard -DNDEBUG)
   (:include cflags_optimized.sexp))))

(env
 (dev
  (c_flags (-Werror))))

(include_subdirs unqualified)

(rule
 (targets cflags_optimized.sexp)
 (action
  (run ../config/cfg.exe)))
